second push, testing also

--- a/docs/chuangye/5598608.md
+++ b/docs/chuangye/5598608.md
@@ -1,7 +1,7 @@
 ---
 id: 5598608
 title: "初创公司的战略真的对吗？从“内容创业”到“内容产品”创业攻略"
-tags: [""]
+tags: []
 custom_edit_url: https://www.woshipm.com/chuangye/5598608.html
 ---
 import { ArticleInfo } from '@site/src/components/ArticleInfo';
