--- a/docs/it/6219943.md
+++ b/docs/it/6219943.md
@@ -1,7 +1,7 @@
 ---
 id: 6219943
 title: "Figma+ChatGpt+Notion+罗技系列套装丨 6000 字分享一个 13 年产品设计师的工作效率提升工具组合"
-tags: [""]
+tags: []
 custom_edit_url: https://www.woshipm.com/it/6219943.html
 ---
 import { ArticleInfo } from '@site/src/components/ArticleInfo';
