--- a/docs/pd/6109906.md
+++ b/docs/pd/6109906.md
@@ -1,7 +1,7 @@
 ---
 id: 6109906
 title: "系统账号体系设计：注册登录设计并没有那么简单！（超详细介绍）"
-tags: ["安全性", "", "注册登录", "用户体验", "账号体系"]
+tags: ["安全性", "注册登录", "用户体验", "账号体系"]
 custom_edit_url: https://www.woshipm.com/pd/6109906.html
 ---
 import { ArticleInfo } from '@site/src/components/ArticleInfo';
