--- a/docs/user-research/5747119.md
+++ b/docs/user-research/5747119.md
@@ -1,7 +1,7 @@
 ---
 id: 5747119
 title: "客户体验｜激活消费，体验先行，把产品做细，把服务做暖！"
-tags: [""]
+tags: []
 custom_edit_url: https://www.woshipm.com/user-research/5747119.html
 ---
 import { ArticleInfo } from '@site/src/components/ArticleInfo';
