--- a/docs/it/6219024.md
+++ b/docs/it/6219024.md
@@ -1,7 +1,7 @@
 ---
 id: 6219024
 title: "实测闪购“三国杀”：淘宝京东优惠大，美团配送速度稳"
-tags: [""]
+tags: []
 custom_edit_url: https://www.woshipm.com/it/6219024.html
 ---
 import { ArticleInfo } from '@site/src/components/ArticleInfo';
